Cleaned unused methods and updated JavaDoc accordingly.